Preliminary checkstyle additions. Mainly line length, spaces, etc.