@@ -5,9 +5,13 @@ import client.utils.Command;
 import client.utils.ServerUtils;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.google.inject.Inject;
-import commons.*;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import commons.Collection;
+import commons.Language;
+import commons.LanguageOptions;
+import commons.Note;
+import commons.Server;
+import commons.Tag;
 import jakarta.ws.rs.client.ClientBuilder;
 import jakarta.ws.rs.client.Entity;
 import jakarta.ws.rs.core.MediaType;
@@ -19,7 +23,19 @@ import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
 import javafx.scene.Parent;
-import javafx.scene.control.*;
+import javafx.scene.control.Alert;
+import javafx.scene.control.Button;
+import javafx.scene.control.ButtonType;
+import javafx.scene.control.CheckBox;
+import javafx.scene.control.ChoiceBox;
+import javafx.scene.control.ComboBox;
+import javafx.scene.control.Dialog;
+import javafx.scene.control.ListCell;
+import javafx.scene.control.ListView;
+import javafx.scene.control.ScrollPane;
+import javafx.scene.control.TextArea;
+import javafx.scene.control.TextField;
+import javafx.scene.control.TextInputDialog;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.text.Text;
@@ -34,33 +50,33 @@ import org.commonmark.parser.Parser;
 import org.commonmark.renderer.html.HtmlRenderer;
 import java.io.IOException;
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Locale;
-import java.util.ResourceBundle;
+import java.util.*;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
-import java.util.Optional;
-import java.util.Set;
-import java.util.HashSet;
 import java.util.stream.Collectors;
-import commons.Server;
 
 public class HomeScreenCtrl {
-    //todo - for all methods, change strings title and body to getting them from the note instead
     private final ScreenCtrl sc;
     private final ServerUtils serverUtils;
     private Stage primaryStage;
     private javafx.scene.Scene homeScene;
     private javafx.scene.Scene editCollectionScene;
 
-    public void init(Stage primaryStage,
-                     Pair<HomeScreenCtrl, Parent> home,
-                     Pair<EditCollectionsViewCtrl, Parent> editCollection) {
+    /**
+     * Initializes the whole scene
+     * @param primaryStage - main stage to be used
+     * @param home - home screen controller
+     * @param editCollection - edit collections controller
+     */
+
+    public void init(final Stage primaryStage,
+                     final Pair<HomeScreenCtrl, Parent> home,
+                     final Pair<EditCollectionsViewCtrl, Parent> editCollection) {
         this.primaryStage = primaryStage;
         this.homeScene = new javafx.scene.Scene(home.getValue());
-        this.editCollectionScene = new javafx.scene.Scene(editCollection.getValue());
+        this.editCollectionScene = new javafx.scene.Scene(
+                editCollection.getValue());
         showHome();
         primaryStage.show();
     }
@@ -80,24 +96,31 @@ public class HomeScreenCtrl {
     }
 
     @Inject
-    public HomeScreenCtrl(ScreenCtrl sc, ServerUtils serverUtils) {
+    public HomeScreenCtrl(final ScreenCtrl sc, final ServerUtils serverUtils) {
         this.sc = sc;
         this.serverUtils = serverUtils;
+        availableTags = FXCollections.observableArrayList(
+                new Tag("#Tag1"),
+                new Tag("#Tag2"),
+                new Tag("#Tag3")
+        );
     }
-
+    private final int requestSuccessfulCode = 200;
+    private final int creationSuccessfulCode = 201;
     @FXML
-    Button addB;
-    public Button deleteB;
-    public Button undoB;
-    public Button dropDownSearchNoteB;
-    public Button prevMatchB;
-    public Button nextMatchB;
+    public Button addB;
+//    public Button deleteB;
+//    public Button undoB;
+//    public Button dropDownSearchNoteB;
+//    public Button prevMatchB;
+//    public Button nextMatchB;
+//
+//    public Button refreshB;
 
-    public Button refreshB;
     public Button editCollectionsB;
 
-    public Text collection_text;
-    public Text language_text;
+    public Text collectionText;
+    public Text languageText;
 
     ResourceBundle bundle;
     Locale locale;
@@ -107,29 +130,25 @@ public class HomeScreenCtrl {
 
     public TextField searchCollectionF;
     public TextField searchNoteF;
-    private int current_search_index = 0;
-    private  ArrayList<Long> note_match_indices;
-    public Button searchMore;
-    public Button getNextMatch;
-    public Button getPreviousMatch;
+    private int currentSearchIndex = 0;
+    private  ArrayList<Long> noteMatchIndices;
+//    public Button searchMore;
+//    public Button getNextMatch;
+//
+//    public Button getPreviousMatch;
     public WebView markDownOutput;
     public ChoiceBox<Collection> selectCollectionBox = new ChoiceBox<>();
-    private CommandInvoker invoker = new CommandInvoker(); // Invoker for keeping history of commands and executing them
-    private Note lastDeletedNote = null;
-    public Button tagsButton;
+    private final CommandInvoker invoker = new CommandInvoker(); // Invoker for keeping history of commands and executing them
+//    private Note lastDeletedNote = null;
+//    public Button tagsButton;
 
     // List of all available tags (replace with actual fetching logic)
-    private final ObservableList<Tag> availableTags = FXCollections.observableArrayList(
-            new Tag("#Tag1"), new Tag("#Tag2"), new Tag("#Tag3")
-    );
+    private final ObservableList<Tag> availableTags;
 
-    /*
-    todo - change the 3 below (current_server, current_collection, current_note) -
-     should not be initialized every time, but i needed to have them to have the search method.
-     */
-    public Server current_server = new Server();
-    public Collection current_collection = new Collection(current_server, "Default");
-    public Note current_note = new Note("", "", current_collection);
+    public Server currentServer = new Server();
+    public Collection currentCollection = new Collection(
+            currentServer, "Default");
+    public Note currentNote = new Note("", "", currentCollection);
 
     public ListView<Note> notesListView;
     private ObservableList<Note> notes = FXCollections.observableArrayList();
@@ -137,7 +156,8 @@ public class HomeScreenCtrl {
     public String title = "";
     public String content = ""; //todo - this should be part of the note - not independent strings
 
-    private ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(1);
+    private final ScheduledExecutorService scheduler = Executors
+            .newScheduledThreadPool(1);
     private String lastSyncedTitle = "";
     private String lastSyncedBody = "";
 
@@ -156,7 +176,10 @@ public class HomeScreenCtrl {
     public void initialize() {
         keyboardShortcuts();
         arrowKeyShortcuts();
-        scheduler.scheduleAtFixedRate(this::syncIfChanged, 0, 5, TimeUnit.SECONDS);
+        scheduler.scheduleAtFixedRate(this::syncIfChanged,
+                0,
+                5,
+                TimeUnit.SECONDS);
         setUpLanguages();
         setUpCollections();
         markDownTitle();
@@ -168,21 +191,28 @@ public class HomeScreenCtrl {
     }
 
     private void handleTitleEdits() {
-        notesListView.getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue) -> {
+        notesListView.getSelectionModel()
+                .selectedItemProperty()
+                .addListener((observable, oldValue, newValue) -> {
             if (newValue != null) {
                 originalTitle = newValue.getTitle();
                 noteTitleF.setText(originalTitle);
-                isTitleEditInProgress = false; // Reset the flag when use selects a note
+                // Reset the flag when use selects a note
+                isTitleEditInProgress = false;
             }
         });
 
-        noteTitleF.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue && isTitleEditInProgress) { // Only call if title was edited
+        noteTitleF.focusedProperty()
+                .addListener((observable, oldValue, newValue) -> {
+            // Only call if title was edited
+            if (!newValue && isTitleEditInProgress) {
                 titleEdit();
             }
         });
 
-        noteTitleF.textProperty().addListener((observable, oldValue, newValue) -> {
+        noteTitleF
+                .textProperty()
+                .addListener((observable, oldValue, newValue) -> {
             if (!newValue.equals(originalTitle)) {
                 isTitleEditInProgress = true; // Title is being edited
             }
@@ -191,37 +221,43 @@ public class HomeScreenCtrl {
 
 
     private void loadTagsFromServer() {
-        try {
-            var response = ClientBuilder.newClient()
-                    .target("http://localhost:8080/api/tags")
-                    .request(MediaType.APPLICATION_JSON)
-                    .get();
+        try (var response = ClientBuilder.newClient()
+                .target("http://localhost:8080/api/tags")
+                .request(MediaType.APPLICATION_JSON)
+                .get()) {
 
-            if (response.getStatus() == 200) {
+            if (response.getStatus() == requestSuccessfulCode) {
                 String json = response.readEntity(String.class);
                 ObjectMapper mapper = new ObjectMapper();
-                List<Tag> fetchedTags = mapper.readValue(json, mapper.getTypeFactory().constructCollectionType(List.class, Tag.class));
+                List<Tag> fetchedTags = mapper
+                        .readValue(json, mapper
+                                        .getTypeFactory()
+                                        .constructCollectionType(List.class,
+                                                Tag.class));
                 availableTags.clear();
                 availableTags.addAll(fetchedTags);
             } else {
-                System.err.println("Failed to fetch tags. Status: " + response.getStatus());
+                System.err.println("Failed to fetch tags. Status: "
+                        + response.getStatus());
             }
-        } catch (Exception e) {
-            System.err.println("Error loading tags: " + e.getMessage());
+        } catch (JsonProcessingException e) {
+            throw new RuntimeException(e);
         }
     }
 
     // todo edit and delete button for the tags
     @FXML
     public void handleTagsButtonAction() {
-        if (current_note == null) {
+        if (currentNote == null) {
             System.err.println("No note selected. Cannot assign tags.");
             return;
         }
 
         // Log current tags
-        System.out.println("Current tags for note '" + current_note.getTitle() + "':");
-        current_note.getTags().forEach(tag -> System.out.println("- " + tag.getName()));
+        System.out.println(
+                "Current tags for note '" + currentNote.getTitle() + "':");
+        currentNote.getTags()
+                .forEach(tag -> System.out.println("- " + tag.getName()));
 
         // Create the dialog
         Dialog<Void> dialog = new Dialog<>();
@@ -235,7 +271,7 @@ public class HomeScreenCtrl {
         // Populate the tag list with checkboxes
         for (Tag tag : availableTags) {
             CheckBox checkBox = new CheckBox(tag.getName());
-            checkBox.setSelected(current_note.getTags().contains(tag));
+            checkBox.setSelected(currentNote.getTags().contains(tag));
             tagCheckBoxes.add(checkBox);
             tagListContainer.getChildren().add(checkBox);
         }
@@ -256,12 +292,20 @@ public class HomeScreenCtrl {
             Optional<String> result = inputDialog.showAndWait();
             result.ifPresent(tagName -> {
                 if (tagName.trim().isEmpty()) {
-                    showErrorDialog("Invalid Tag Name", "The tag name cannot be empty.");
+                    showErrorDialog(
+                            "Invalid Tag Name",
+                            "The tag name cannot be empty.");
                     return;
                 }
 
-                if (availableTags.stream().anyMatch(tag -> tag.getName().equals(tagName.trim()))) {
-                    showErrorDialog("Duplicate Tag", "A tag with the name '" + tagName.trim() + "' already exists.");
+                if (availableTags.stream()
+                        .anyMatch(tag -> tag
+                                .getName()
+                                .equals(tagName.trim()))) {
+                    showErrorDialog("Duplicate Tag",
+                            "A tag with the name '"
+                                    + tagName.trim()
+                                    + "' already exists.");
                     return;
                 }
 
@@ -274,9 +318,11 @@ public class HomeScreenCtrl {
 
                 try {
                     saveTagToServer(newTag);
-                    System.out.println("New tag saved to server: " + newTag.getName());
+                    System.out.println(
+                            "New tag saved to server: " + newTag.getName());
                 } catch (Exception e) {
-                    System.err.println("Failed to save the new tag: " + e.getMessage());
+                    System.err.println(
+                            "Failed to save the new tag: " + e.getMessage());
                 }
             });
         });
@@ -284,7 +330,9 @@ public class HomeScreenCtrl {
         // Layout for the dialog content
         VBox dialogContent = new VBox(15, scrollPane, addTagButton);
         dialog.getDialogPane().setContent(dialogContent);
-        dialog.getDialogPane().getButtonTypes().addAll(ButtonType.OK, ButtonType.CANCEL);
+        dialog.getDialogPane()
+                .getButtonTypes()
+                .addAll(ButtonType.OK, ButtonType.CANCEL);
 
         // Handle dialog result
         dialog.setResultConverter(button -> {
@@ -303,17 +351,18 @@ public class HomeScreenCtrl {
         dialog.showAndWait();
     }
 
-    private void showErrorDialog(String title, String message) {
+    private void showErrorDialog(
+            final String currentTitle, final String message) {
         Alert alert = new Alert(Alert.AlertType.ERROR);
-        alert.setTitle(title);
+        alert.setTitle(currentTitle);
         alert.setHeaderText(null);
         alert.setContentText(message);
         alert.showAndWait();
     }
 
 
-    private void updateNoteTags(Set<Tag> selectedTags) {
-        Set<Tag> currentTags = new HashSet<>(current_note.getTags());
+    private void updateNoteTags(final Set<Tag> selectedTags) {
+        Set<Tag> currentTags = new HashSet<>(currentNote.getTags());
         boolean tagsUpdated = false;
 
         // Add new tags
@@ -335,28 +384,33 @@ public class HomeScreenCtrl {
         }
 
         if (tagsUpdated) {
-            current_note.setTags(currentTags);
-            syncNoteTagsWithServer(current_note);
+            currentNote.setTags(currentTags);
+            syncNoteTagsWithServer(currentNote);
         }
     }
 
-    private void saveTagToServer(Tag tag) throws IOException {
+    private void saveTagToServer(final Tag tag) throws IOException {
         String json = new ObjectMapper().writeValueAsString(tag);
         var response = ClientBuilder.newClient()
                 .target("http://localhost:8080/api/tags/create")
                 .request(MediaType.APPLICATION_JSON)
                 .post(Entity.entity(json, MediaType.APPLICATION_JSON));
 
-        if (response.getStatus() != 201) {
-            throw new IOException("Failed to save tag. Status: " + response.getStatus());
+        if (response.getStatus() != creationSuccessfulCode) {
+            throw new IOException("Failed to save tag. Status: "
+                    + response.getStatus());
         }
     }
 
 
-    private void syncNoteTagsWithServer(Note note) {
+    private void syncNoteTagsWithServer(final Note note) {
         try {
             ObjectMapper mapper = new ObjectMapper();
-            Set<String> tagNames = note.getTags().stream().map(Tag::getName).collect(Collectors.toSet());
+            Set<String> tagNames = note
+                    .getTags()
+                    .stream()
+                    .map(Tag::getName)
+                    .collect(Collectors.toSet());
             String json = mapper.writeValueAsString(tagNames);
 
             Response response = ClientBuilder.newClient()
@@ -364,8 +418,11 @@ public class HomeScreenCtrl {
                     .request(MediaType.APPLICATION_JSON)
                     .put(Entity.entity(json, MediaType.APPLICATION_JSON));
 
-            if (response.getStatus() != 200) {
-                System.err.println("Failed to sync tags with server. Status: " + response.getStatus());
+            if (response.getStatus() != requestSuccessfulCode) {
+                System.err.println(
+                        "Failed to sync tags with server. Status: "
+                        + response.getStatus()
+                );
             }
         } catch (Exception e) {
             System.err.println("Error syncing tags: " + e.getMessage());
@@ -382,7 +439,7 @@ public class HomeScreenCtrl {
         Platform.runLater(() -> {
             addB.getScene().setOnKeyPressed(event -> {
                 // When clicking 'Shift + A' add method will be called
-                if(event.isShiftDown() && event.getCode() == KeyCode.A) {
+                if (event.isShiftDown() && event.getCode() == KeyCode.A) {
                     try {
                         add();
                     } catch (IOException | InterruptedException e) {
@@ -390,12 +447,12 @@ public class HomeScreenCtrl {
                     }
                 }
                 // When clicking 'Shift + D' delete method will be called
-                if(event.isShiftDown()
+                if (event.isShiftDown()
                         && event.getCode() == KeyCode.D) {
                     delete();
                 }
                 // When clicking 'Shift + Tab' the show shortcuts alert will pop up
-                if(event.isShiftDown()
+                if (event.isShiftDown()
                         && event.getCode() == KeyCode.TAB) {
                     showShortcuts();
                 }
@@ -409,19 +466,19 @@ public class HomeScreenCtrl {
     public void arrowKeyShortcuts() {
         // For note title
         noteTitleF.setOnKeyPressed(event -> {
-            // When clicking 'Shift + Right Arrow' the focus will go to the notes list view
-            if(event.isShiftDown() && event.getCode() == KeyCode.LEFT) {
+            //When clicking 'Shift + Right Arrow' the focus will go to the notes list view
+            if (event.isShiftDown() && event.getCode() == KeyCode.LEFT) {
                 notesListView.requestFocus();
             }
             // When clicking 'Shift + Left Arrow' the focus will go to the note body
-            if(event.isShiftDown() && event.getCode() == KeyCode.RIGHT) {
+            if (event.isShiftDown() && event.getCode() == KeyCode.RIGHT) {
                 noteBodyF.requestFocus();
             }
         });
         // For note body
         noteBodyF.setOnKeyPressed(event -> {
             // When clicking 'Shift + Left Arrow' the focus will go to the note title
-            if(event.isShiftDown() && event.getCode() == KeyCode.LEFT) {
+            if (event.isShiftDown() && event.getCode() == KeyCode.LEFT) {
                 noteTitleF.requestFocus();
             }
         });
@@ -435,10 +492,12 @@ public class HomeScreenCtrl {
         shortcuts.setTitle("Keyboard Shortcuts");
         shortcuts.setHeaderText("Available Keyboard Shortcuts");
         shortcuts.setContentText(
-                "Shift + A: Add a new note\n" +
-                        "Shift + D: Delete the selected note\n" +
-                        "Shift + Arrow Left/Right: Navigate between fields\n\t\twhen in the text field\n" +
-                        "Shift + Tab: Show shortcuts pop-up"
+                """
+                        Shift + A: Add a new note
+                        Shift + D: Delete the selected note
+                        Shift + Arrow Left/Right: Navigate between fields
+                        \t\twhen in the text field
+                        Shift + Tab: Show shortcuts pop-up"""
         );
         shortcuts.showAndWait();
     }
@@ -451,17 +510,20 @@ public class HomeScreenCtrl {
     private void syncIfChanged() {
         Platform.runLater(() -> {
             // Check if the note content has changed since the last sync
-            if (current_note != null &&
-                    (!current_note.getBody().equals(lastSyncedBody))) {
+            if ((currentNote != null)
+                    && (!currentNote.getBody().equals(lastSyncedBody))) {
 
                 // Sync with the server if change
-                syncNoteWithServer(current_note);
+                syncNoteWithServer(currentNote);
 
                 // Update the last synced title and body to current title and body
-                lastSyncedTitle = current_note.getTitle();
-                lastSyncedBody = current_note.getBody();
-
-                System.out.println("Note synced with the server at: " + java.time.LocalTime.now()); // for testing
+                lastSyncedTitle = currentNote.getTitle();
+                lastSyncedBody = currentNote.getBody();
+                // for testing
+                System.out.println(
+                        "Note synced with the server at: "
+                        + java.time.LocalTime.now()
+                ); 
             }
         });
     }
@@ -470,7 +532,7 @@ public class HomeScreenCtrl {
      * This method ensures the syncing with the server (database)
      * @param note - note provided - in syncIfChanged method to be specific
      */
-    private void syncNoteWithServer(Note note) {
+    private void syncNoteWithServer(final Note note) {
         try {
             String json = new ObjectMapper().writeValueAsString(note);
             System.out.println("Serialized JSON: " + json);  // for testing
@@ -484,24 +546,29 @@ public class HomeScreenCtrl {
 
             // Refresh the notes list
             Platform.runLater(() -> refreshNotesInListView(note));
-
-            System.out.println("Response Status: " + response.getStatus()); // for testing
-            System.out.println("Response Body: " + response.readEntity(String.class)); // for testing
+            // for testing
+            System.out.println("Response Status: " + response.getStatus());
+            System.out.println("Response Body: "
+                    + response.readEntity(String.class));
             // if something screwed up :D
-            if (response.getStatus() != 200) {
-                System.err.println("Failed to update note on server. Status code: " + response.getStatus());
+            if (response.getStatus() != requestSuccessfulCode) {
+                System.err.println(
+                        "Failed to update note on server. Status code: "
+                        + response.getStatus()
+                );
             }
         } catch (Exception e) {
-            System.err.println("Error syncing note with server: " + e.getMessage());
+            System.err.println(
+                    "Error syncing note with server: " + e.getMessage());
             e.printStackTrace();
         }
     }
 
-    private void refreshNotesInListView(Note note) {
+    private void refreshNotesInListView(final Note note) {
         for (int i = 0; i < notes.size(); i++) {
             Note update = notes.get(i);
             if (note.getNoteId() == update.getNoteId()) {
-                if(update.getTitle() != null && !update.getTitle().equals("")) {
+                if (update.getTitle() != null && !update.getTitle().isEmpty()) {
                     // Update the note's data in the ObservableList
                     notes.set(i, update);
                     break;
@@ -510,6 +577,9 @@ public class HomeScreenCtrl {
         }
     }
 
+    /**
+     * Edits the colllections in the scene
+     */
     public void editCollections() {
         System.out.println("Edit Collections View Selected");
         sc.showEditCollection();
@@ -523,7 +593,7 @@ public class HomeScreenCtrl {
                     .request(MediaType.APPLICATION_JSON)
                     .get();
 
-            if (response.getStatus() == 200) {
+            if (response.getStatus() == requestSuccessfulCode) {
                 // Parse the JSON response into a List of Note objects
                 String json = response.readEntity(String.class);
                 ObjectMapper mapper = new ObjectMapper();
@@ -533,7 +603,7 @@ public class HomeScreenCtrl {
                 notes.clear(); // Clear existing notes
                 notes.addAll(fetchedNotes);
                 for (Note note:fetchedNotes) {
-                    current_collection.addNote(note);
+                    currentCollection.addNote(note);
                 }
             } else {
                 System.err.println("Failed to fetch notes. Error code " + response.getStatus());
@@ -561,7 +631,7 @@ public class HomeScreenCtrl {
              *              If true, the cell should be cleared and not display any content.
              */
             @Override
-            protected void updateItem(Note note, boolean empty) {
+            protected void updateItem(final Note note, final boolean empty) {
                 super.updateItem(note, empty);
                 setText(empty || note == null ? null : note.getTitle());
             }
@@ -570,7 +640,7 @@ public class HomeScreenCtrl {
         // Handling selection in the ListView
         notesListView.getSelectionModel().selectedItemProperty().addListener((obs, oldNote, newNote) -> {
             if (newNote != null) {
-                current_note = newNote;
+                currentNote = newNote;
                 //change the output in the front-end for title and body
                 noteTitleF.setText(newNote.getTitle());
                 noteBodyF.setText(newNote.getBody());
@@ -585,17 +655,15 @@ public class HomeScreenCtrl {
      * a heading of type h1, because it is a title
      */
     public void markDownTitle() {
-        noteTitleF.textProperty().addListener(new ChangeListener<String>() {
-            @Override
-            public void changed(ObservableValue<? extends String> observable, String oldValue, String newValue) {
-                current_note.setTitle(newValue);
-                // MD -> HTML
-                title = "<h1>" + renderer.render(parser.parse(newValue)) + "</h1>";
-                // Adds title and content together so it's not overridden
-                String titleAndContent = title + content;
-                // WebView is updated based on the HTML file
-                markDownOutput.getEngine().loadContent(titleAndContent);
-            }
+        noteTitleF.textProperty().addListener(
+                (observable, oldValue, newValue) -> {
+            currentNote.setTitle(newValue);
+            // MD -> HTML
+            title = "<h1>" + renderer.render(parser.parse(newValue)) + "</h1>";
+            // Adds title and content together so it's not overridden
+            String titleAndContent = title + content;
+            // WebView is updated based on the HTML file
+            markDownOutput.getEngine().loadContent(titleAndContent);
         });
     }
 
@@ -606,9 +674,12 @@ public class HomeScreenCtrl {
     public void markDownContent() {
         noteBodyF.textProperty().addListener(new ChangeListener<String>() {
             @Override
-            public void changed(ObservableValue<? extends String> observable, String oldValue, String newValue) {
+            public void changed(
+                    final ObservableValue<? extends String> observable,
+                    final String oldValue,
+                    final String newValue) {
                 // MD -> HTML
-                current_note.setBody(newValue);
+                currentNote.setBody(newValue);
                 content = renderer.render(parser.parse(newValue));
                 // Adds title and content together so it's not overridden
                 String titleAndContent = title + content;
@@ -621,11 +692,10 @@ public class HomeScreenCtrl {
 
     /**
      * Utility function used to locate resources within applications filepath
-     *
-     * @param path
-     * @return
+     * @param path - path of the scene
+     * @return - returns the URL for that particular scene
      */
-    private static URL getLocation(String path) {
+    private static URL getLocation(final String path) {
         return HomeScreen.class.getClassLoader().getResource(path);
     }
 
@@ -638,27 +708,29 @@ public class HomeScreenCtrl {
         String baseTitle = "New note";
         String newTitle = baseTitle;
         int counter = 1;
-        List<String> existingTitles = notes.stream().map(Note::getTitle).toList();
+        List<String> existingTitles = notes.stream()
+                .map(Note::getTitle)
+                .toList();
         while (existingTitles.contains(newTitle)) {
             newTitle = baseTitle + " (" + counter + ")";
             counter++;
         }
 
         // Create the new note
-        Note newNote = new Note(newTitle, "", current_collection);
+        Note newNote = new Note(newTitle, "", currentCollection);
         // Create command for adding new note
-        Command addNoteCommand = new AddNoteCommand(this,newNote);
+        Command addNoteCommand = new AddNoteCommand(this, newNote);
         // Use the invoker to execute the command
         invoker.executeCommand(addNoteCommand);
     }
-    public void addCommand(Note newNote) throws IOException, InterruptedException {
+    public void addCommand(final Note newNote) throws IOException {
         Note savedNote = saveNoteToServer(newNote);
 
-        current_collection.addNote(savedNote);  // Add to the collection
+        currentCollection.addNote(savedNote);  // Add to the collection
         notes.add(savedNote);                   // Add to the ObservableList
         notesListView.getSelectionModel().select(savedNote);
         // Update UI fields
-        current_note = savedNote;
+        currentNote = savedNote;
         noteTitleF.setText(savedNote.getTitle());
         noteBodyF.setText(savedNote.getBody());
     }
@@ -672,7 +744,7 @@ public class HomeScreenCtrl {
      * @param note - note provided
      * @return a Note that was saved with a unique id
      */
-    public Note saveNoteToServer(Note note) throws IOException {
+    public Note saveNoteToServer(final Note note) throws IOException {
         var json = new ObjectMapper().writeValueAsString(note);
         var requestBody = Entity.entity(json, MediaType.APPLICATION_JSON);
         // Connect to the create endpoint, where add requests are processed
@@ -681,7 +753,7 @@ public class HomeScreenCtrl {
                 .request(MediaType.APPLICATION_JSON)
                 .post(requestBody);
 
-        if (response.getStatus() == 201) {
+        if (response.getStatus() == creationSuccessfulCode) {
             return response.readEntity(Note.class);
         } else {
             throw new IOException("Server returned status: " + response.getStatus());
@@ -693,13 +765,19 @@ public class HomeScreenCtrl {
      * Sends request to the server to add a note with a provided Note
      * @param note - Note
      */
-    public void addRequest(Note note) throws JsonProcessingException {
-        var json = new ObjectMapper().writeValueAsString(note);
-        var requestBody = Entity.entity(json, MediaType.APPLICATION_JSON);
-        var response = ClientBuilder.newClient()
-                .target("http://localhost:8080/api/notes/create") // Update with the correct endpoint for adding a note
-                .request(MediaType.APPLICATION_JSON)
-                .post(requestBody);
+    public void addRequest(final Note note) throws JsonProcessingException {
+        try {
+            var json = new ObjectMapper().writeValueAsString(note);
+            var requestBody = Entity.entity(json, MediaType.APPLICATION_JSON);
+            var response = ClientBuilder.newClient()
+                    .target("http://localhost:8080/api/notes/create") // Update with the correct endpoint for adding a note
+                    .request(MediaType.APPLICATION_JSON)
+                    .post(requestBody);
+        } catch (Exception e) {
+            System.err.println(
+                    "Error requesting addition of note: " + e.getMessage());
+            e.printStackTrace();
+        }
     }
 
     /**
@@ -717,10 +795,11 @@ public class HomeScreenCtrl {
 
             if (result.isPresent() && result.get() == ButtonType.OK) {
                 // Create a delete command and execute it
-                Command deleteCommand = new DeleteNoteCommand(this, selectedNote);
+                Command deleteCommand = new DeleteNoteCommand(
+                        this, selectedNote);
                 invoker.executeCommand(deleteCommand);
-
-                System.out.println("Note deleted: " + selectedNote.getTitle()); // For testing purposes
+                // For testing purposes
+                System.out.println("Note deleted: " + selectedNote.getTitle());
                 System.out.println("Note deleted: " + selectedNote.getNoteId());
 
                 //Confirmation alert that note was deleted
@@ -729,19 +808,18 @@ public class HomeScreenCtrl {
                 alert.setContentText("The note has been successfully deleted!");
                 alert.showAndWait();
             }
-        }
-        // Show a warning if no note is selected
-        else {
+        } else {
             Alert alert = new Alert(Alert.AlertType.WARNING);
             alert.setTitle("No Note Selected!");
             alert.setHeaderText("No note selected to delete.");
-            alert.setContentText("Please select a note from the list to delete.");
+            alert.setContentText(
+                    "Please select a note from the list to delete.");
             alert.showAndWait();
         }
         System.out.println("Delete");  //Temporary for testing
     }
 
-    public void deleteCommand(long noteId){
+    public void deleteCommand(final long noteId) {
         // Find the note in the ObservableList by its ID
         Note noteToDelete = null;
         for (Note note : notes) {
@@ -755,7 +833,7 @@ public class HomeScreenCtrl {
             // Remove the note from the ObservableList (UI)
             notes.remove(noteToDelete);
             // Remove the note from the current collection
-            current_collection.getNotes().remove(noteToDelete);
+            currentCollection.getNotes().remove(noteToDelete);
             // Send a delete request to the server
             deleteRequest(noteId);
         } else {
@@ -766,19 +844,23 @@ public class HomeScreenCtrl {
 
     /**
      * Sends request to the server to delete a note by a provided ID
-     * @param noteId
+     * @param noteId - ID of the note to be deleted
      */
-    public static void deleteRequest(long noteId){
+    public static void deleteRequest(final long noteId) {
         Response response = ClientBuilder.newClient()
-                .target("http://localhost:8080/api/notes/delete/" + noteId) // Endpoint for deletion
+                // Endpoint for deletion
+                .target("http://localhost:8080/api/notes/delete/" + noteId)
                 .request()
                 .delete();
-        if (response.getStatus() == Response.Status.NO_CONTENT.getStatusCode()) {
+        if (response.getStatus() == Response.Status.NO_CONTENT
+                .getStatusCode()) {
             System.out.println("Note successfully deleted.");
-        } else if (response.getStatus() == Response.Status.NOT_FOUND.getStatusCode()) {
+        } else if (response.getStatus() == Response.Status.NOT_FOUND
+                .getStatusCode()) {
             System.out.println("Note not found.");
         } else {
-            System.out.println("Failed to delete note. Status: " + response.getStatus());
+            System.out.println("Failed to delete note. Status: " + response
+                    .getStatus());
         }
         response.close();
     }
@@ -787,7 +869,8 @@ public class HomeScreenCtrl {
      * Undoes the last action
      */
     public void undo() throws JsonProcessingException {
-        System.out.println("Undo");//Temporary for testing
+        //Temporary for testing
+        System.out.println("Undo");
         invoker.undoLastCommand();
     }
 
@@ -796,7 +879,9 @@ public class HomeScreenCtrl {
      * Edits the title of the currently selected note
      */
     public void titleEdit() {
-        if (!isTitleEditInProgress) return;
+        if (!isTitleEditInProgress) {
+            return;
+        }
 
         Note selectedNote = notesListView.getSelectionModel().getSelectedItem();
         if (selectedNote != null) {
@@ -804,17 +889,22 @@ public class HomeScreenCtrl {
 
             if (!newTitle.equals(originalTitle)) {
                 try {
-                    boolean isDuplicate = validateTitleWithServer(current_collection.getCollectionId(), newTitle);
+                    boolean isDuplicate = validateTitleWithServer(
+                            currentCollection.getCollectionId(), newTitle);
                     // Show and alert if the title is duplicate
                     if (isDuplicate) {
                         Alert alert = new Alert(Alert.AlertType.WARNING);
                         alert.setTitle("Duplicate Title");
                         alert.setHeaderText("Title Already Exists");
-                        alert.setContentText("The title \"" + newTitle + "\" already exists in this collection. Please choose a different one.");
+                        alert.setContentText("The title \""
+                                + newTitle
+                                + "\" already exists in this collection. "
+                                + "Please choose a different one.");
                         alert.showAndWait();
 
                         // Revert to the original title
-                        Platform.runLater(() -> noteTitleF.setText(originalTitle));
+                        Platform.runLater(() -> noteTitleF
+                                .setText(originalTitle));
                     } else {
                         // If not duplicate, update title and sync with the server
                         selectedNote.setTitle(newTitle);
@@ -823,7 +913,8 @@ public class HomeScreenCtrl {
                     }
                 } catch (Exception e) {
                     e.printStackTrace();
-                    System.err.println("Error validating title with server: " + e.getMessage());
+                    System.err.println("Error validating title with server: " 
+                            + e.getMessage());
                 }
             }
         }
@@ -836,7 +927,8 @@ public class HomeScreenCtrl {
      * @return true if it is a duplicate, false if it is not
      * @throws IOException when it returns something else then 200/409 code
      */
-    public boolean validateTitleWithServer(Long collectionId, String newTitle) throws IOException {
+    public boolean validateTitleWithServer(
+            final Long collectionId, final String newTitle) throws IOException {
         return serverUtils.validateTitleWithServer(collectionId, newTitle);
     }
 
@@ -863,14 +955,14 @@ public class HomeScreenCtrl {
      * @param noteId The ID of the note to fetch
      * @return The fetched Note object or null if it was not found or there was an error
      */
-    private Note fetchNoteById(long noteId) {
+    private Note fetchNoteById(final long noteId) {
         try {
             var response = ClientBuilder.newClient()
                     .target("http://localhost:8080/api/notes/" + noteId) // Replace with actual API endpoint for fetching a single note
                     .request(MediaType.APPLICATION_JSON)
                     .get();
 
-            if (response.getStatus() == 200) {
+            if (response.getStatus() == requestSuccessfulCode) {
                 String json = response.readEntity(String.class);
                 ObjectMapper mapper = new ObjectMapper();
                 return mapper.readValue(json, Note.class);
@@ -888,45 +980,62 @@ public class HomeScreenCtrl {
      * Searches for a note based on text field input
      */
     public void searchNote() { //make sure this remains like this after merge.
-        String search_text = searchNoteF.textProperty().getValue();
-        note_match_indices = current_note.getMatchIndices(search_text);
-        if (search_text.isEmpty()){
-            current_search_index=0;
+        String searchText = searchNoteF.textProperty().getValue();
+        noteMatchIndices = currentNote.getMatchIndices(searchText);
+        if (searchText.isEmpty()) {
+            currentSearchIndex = 0;
         }
-        String titleHighlighted = current_note.getTitle();
-        String bodyHighlighted = current_note.getBody();
-        if (!note_match_indices.isEmpty()){
-            if (note_match_indices.getFirst()==-1L && note_match_indices.size()==1L){
-                System.out.println("Not found in \""+current_note.getTitle()+"\"");
-            } else{ //parse in special way such that the found results are highlighted
-                for (int i=note_match_indices.size()-1; i>=0; i--){//iterating from the back to not have to consider changes in index due to additions
-                    if (note_match_indices.get(i)<titleHighlighted.length()){
-                        if (i==current_search_index) {
-                            titleHighlighted = titleHighlighted.substring(0, Math.toIntExact(note_match_indices.get(i)))
+        String titleHighlighted = currentNote.getTitle();
+        String bodyHighlighted = currentNote.getBody();
+        if (!noteMatchIndices.isEmpty()) {
+            if (noteMatchIndices.getFirst() == -1L && noteMatchIndices.size() == 1L) {
+                System.out.println("Not found in \"" + currentNote.getTitle() + "\"");
+            } else {
+                //parse in special way such that the found results are highlighted
+                for (int i = noteMatchIndices.size() - 1; i >= 0; i--) {
+                    //iterating from the back to not have to consider changes in index due to additions
+                    if (noteMatchIndices.get(i) < titleHighlighted.length()) {
+                        if (i == currentSearchIndex) {
+                            titleHighlighted = titleHighlighted.substring(
+                                    0, Math.toIntExact(noteMatchIndices.get(i)))
                                     + "<mark style=\"background: #E1C16E\">"
-                                    + search_text
+                                    + searchText
                                     + "</mark>"
-                                    + titleHighlighted.substring((int) (note_match_indices.get(i) + search_text.length()));
+                                    + titleHighlighted
+                                    .substring(
+                                            Math.toIntExact(noteMatchIndices.get(i)) + searchText.length()
+                                    );
                         } else {
-                            titleHighlighted = titleHighlighted.substring(0, Math.toIntExact(note_match_indices.get(i)))
+                            titleHighlighted = titleHighlighted.substring(
+                                    0, Math.toIntExact(noteMatchIndices.get(i)))
                                     + "<mark>"
-                                    + search_text
+                                    + searchText
                                     + "</mark>"
-                                    + titleHighlighted.substring((int) (note_match_indices.get(i) + search_text.length()));
+                                    + titleHighlighted
+                                    .substring(Math.toIntExact(noteMatchIndices.get(i)) + searchText.length()
+                                    );
                         }
                     } else {
-                        if (i==current_search_index){
-                            bodyHighlighted = bodyHighlighted.substring(0, (int) (note_match_indices.get(i) - titleHighlighted.length()))
+                        if (i == currentSearchIndex) {
+                            bodyHighlighted = bodyHighlighted
+                                    .substring(0, Math.toIntExact(
+                                            noteMatchIndices.get(i))
+                                            - titleHighlighted.length())
                                     + "<mark style=\"background: #E1C16E\">"
-                                    + search_text
+                                    + searchText
                                     + "</mark>"
-                                    + bodyHighlighted.substring((int) (note_match_indices.get(i) - titleHighlighted.length() + search_text.length()));
+                                    + bodyHighlighted.substring(
+                                    (Math.toIntExact(noteMatchIndices
+                                            .get(i))
+                                            - titleHighlighted
+                                            .length())
+                                            + searchText.length());
                         } else {
-                            bodyHighlighted = bodyHighlighted.substring(0, (int) (note_match_indices.get(i) - titleHighlighted.length()))
+                            bodyHighlighted = bodyHighlighted.substring(0, (int) (noteMatchIndices.get(i) - titleHighlighted.length()))
                                     + "<mark>"
-                                    + search_text
+                                    + searchText
                                     + "</mark>"
-                                    + bodyHighlighted.substring((int) (note_match_indices.get(i) - titleHighlighted.length() + search_text.length()));
+                                    + bodyHighlighted.substring((int) (noteMatchIndices.get(i) - titleHighlighted.length() + searchText.length()));
                         }
                     }
                 }
@@ -934,8 +1043,8 @@ public class HomeScreenCtrl {
         }
         titleHighlighted  = "<h1>" + renderer.render(parser.parse(titleHighlighted)) + "</h1>";
         bodyHighlighted = renderer.render(parser.parse(bodyHighlighted));
-        String total_content = titleHighlighted + bodyHighlighted;
-        markDownOutput.getEngine().loadContent(total_content);
+        String totalContent = titleHighlighted + bodyHighlighted;
+        markDownOutput.getEngine().loadContent(totalContent);
 
 
     }
@@ -943,45 +1052,56 @@ public class HomeScreenCtrl {
     /**
      * Searches through collection and displays notes that match search
      */
-    public void searchCollection(){//todo - finish
-        String search_text = searchCollectionF.textProperty().getValue();
-        ArrayList<ArrayList<Long>> collection_match_indices = current_collection.getSearch(search_text); //todo -check if collection gets updated, or only fetchedNoted
+    public void searchCollection() {
+        String searchText = searchCollectionF.textProperty().getValue();
+        ArrayList<ArrayList<Long>> collectionMatchIndices = currentCollection
+                .getSearch(searchText);
 
-        ObservableList<Note> display_notes = FXCollections.observableArrayList();
-        if (!collection_match_indices.isEmpty()){
-            if (collection_match_indices.getFirst().getFirst() == -1) {
-                System.out.println("There are no matches for " + search_text);
-                display_notes.clear(); //gives an empty display
+        ObservableList<Note> displayNotes = FXCollections.observableArrayList();
+        if (!collectionMatchIndices.isEmpty()) {
+            if (collectionMatchIndices.getFirst().getFirst() == -1) {
+                System.out.println("There are no matches for " + searchText);
+                displayNotes.clear(); //gives an empty display
             } else {
-                for (int i = 0; i < collection_match_indices.size(); i++) {
-                    display_notes.add(current_collection.getNoteByID(Math.toIntExact(collection_match_indices.get(i).getFirst()))); //todo - fix the indexing so that we do not have the minus 1 here
+                for (ArrayList<Long> collectionMatchIndex : collectionMatchIndices) {
+                    displayNotes.add(currentCollection
+                            .getNoteByID(Math
+                                    .toIntExact(collectionMatchIndex
+                                            .getFirst())));
                 }
             }
         } else {
-            display_notes = notes;
+            displayNotes = notes;
         }
-        notesListView.setItems(display_notes);
+        notesListView.setItems(displayNotes);
     }
 
 
     public void setUpLanguages() {
-        selectLangBox.getItems().forEach(lang -> System.out.println("Language: " + lang.getAbbr()));
-        selectLangBox.getItems().setAll(LanguageOptions.getInstance().getLanguages());
+        selectLangBox.getItems().forEach(lang -> System.out.println(
+                "Language: " + lang.getAbbr()));
+        selectLangBox.getItems()
+                .setAll(LanguageOptions.getInstance().getLanguages());
         selectLangBox.setValue(selectLangBox.getItems().getFirst());
         // How to do this gotten from stack overflow (https://stackoverflow.com/questions/32334137/javafx-choicebox-with-image-and-text)
-        selectLangBox.setCellFactory(new Callback<ListView<Language>, ListCell<Language>>() {
+        selectLangBox.setCellFactory(
+                new Callback<ListView<Language>, ListCell<Language>>() {
             @Override
-            public ListCell<Language> call(ListView<Language> listView) {
+            public ListCell<Language> call(final ListView<Language> listView) {
                 return new ListCell<Language>() {
                     @Override
-                    protected void updateItem(Language item, boolean empty) {
+                    protected void updateItem(
+                            final Language item, final boolean empty) {
                         super.updateItem(item, empty);
                         if (empty || item == null) {
                             setText(null);
                             setGraphic(null);
                         } else {
                             String iconPath = item.getImg_path();
-                            Image icon = new Image(getClass().getClassLoader().getResourceAsStream(iconPath));
+                            Image icon = new Image(Objects
+                                    .requireNonNull(getClass()
+                                            .getClassLoader()
+                                            .getResourceAsStream(iconPath)));
                             ImageView iconImageView = new ImageView(icon);
                             double height = 15;
                             double width = 30;
@@ -998,14 +1118,19 @@ public class HomeScreenCtrl {
 
         selectLangBox.setButtonCell(new ListCell<Language>() {
             @Override
-            protected void updateItem(Language item, boolean empty) {
+            protected void updateItem(
+                    final Language item, final boolean empty) {
                 super.updateItem(item, empty);
                 if (empty || item == null) {
                     setText(null);
                     setGraphic(null);
                 } else {
-                    String iconPath = item.getImg_path(); //path described from client location
-                    Image icon = new Image(getClass().getClassLoader().getResourceAsStream(iconPath));
+                    //path described from client location
+                    String iconPath = item.getImg_path();
+                    Image icon = new Image(Objects.requireNonNull(
+                            getClass()
+                                    .getClassLoader()
+                                    .getResourceAsStream(iconPath)));
                     ImageView iconImageView = new ImageView(icon);
                     double height = 15;
                     double width = 30;
@@ -1019,15 +1144,15 @@ public class HomeScreenCtrl {
 
         selectLangBox.setConverter(new StringConverter<>() {
             @Override
-            public String toString(Language language) {
+            public String toString(final Language language) {
                 return language.getAbbr();
             }
 
             @Override
-            public Language fromString(String s) {
+            public Language fromString(final String s) {
                 Language lang;
-                for (int i=0; i<selectLangBox.getItems().size();i++){
-                    if (selectLangBox.getItems().get(i).getAbbr().equals(s)){
+                for (int i = 0; i < selectLangBox.getItems().size(); i++) {
+                    if (selectLangBox.getItems().get(i).getAbbr().equals(s)) {
                         lang = selectLangBox.getItems().get(i);
                         return lang;
                     }
@@ -1036,22 +1161,24 @@ public class HomeScreenCtrl {
             }
         });
 
-        selectLangBox.getSelectionModel().selectedItemProperty().addListener((obs, oldLang, newLang) -> {
+        selectLangBox.getSelectionModel()
+                .selectedItemProperty()
+                .addListener((obs, oldLang, newLang) -> {
             if (!newLang.equals(oldLang)) {
                 System.out.println(selectLangBox.getValue().getAbbr());
                 locale = switch (selectLangBox.getValue().getAbbr()) {
-                    case "ES" -> new Locale("es", "ES");
-                    case "NL" -> new Locale("nl", "NL");
-                    case "ZZ" -> new Locale("zz", "ZZ");
-                    default -> new Locale("en", "US");
+                    case "ES" -> Locale.of("es", "ES");
+                    case "NL" -> Locale.of("nl", "NL");
+                    case "ZZ" -> Locale.of("zz", "ZZ");
+                    default -> Locale.of("en", "US");
                 };
                 bundle = ResourceBundle.getBundle("MyBundle", locale);
 
                 editCollectionsB.setText(bundle.getString("edit_collection"));
                 searchCollectionF.setPromptText(bundle.getString("Search"));
                 searchNoteF.setPromptText(bundle.getString("Search"));
-                collection_text.setText(bundle.getString("Collection"));
-                language_text.setText(bundle.getString("Language"));
+                collectionText.setText(bundle.getString("Collection"));
+                languageText.setText(bundle.getString("Language"));
                 noteTitleF.setPromptText(bundle.getString("Untitled"));
                 noteBodyF.setPromptText(bundle.getString("Text_Area"));
 
@@ -1062,54 +1189,56 @@ public class HomeScreenCtrl {
 
     public void setUpCollections() {
         selectCollectionBox.getItems().setAll(
-                new Collection(current_server, "Default")
+                new Collection(currentServer, "Default")
                 //todo - add all collections
         );
 
         selectCollectionBox.setValue(selectCollectionBox.getItems().getFirst());
         selectCollectionBox.setConverter(new StringConverter<>() {
             @Override
-            public String toString(Collection collection) {
+            public String toString(final Collection collection) {
                 return collection.getCollectionTitle();
             }
 
             @Override
-            public Collection fromString(String s) {
+            public Collection fromString(final String s) {
                 return null;
             }
         });
 
-        selectCollectionBox.getSelectionModel().selectedItemProperty().addListener((obs, oldCollection, newCollection) -> {
+        selectCollectionBox.getSelectionModel().selectedItemProperty()
+                .addListener((obs, oldCollection, newCollection) -> {
             if (!newCollection.equals(oldCollection)) {
-                System.out.println(selectCollectionBox.getValue().getCollectionTitle());
+                System.out.println(selectCollectionBox
+                        .getValue()
+                        .getCollectionTitle());
             }
         });
     }
 
     public void prevMatchB() {
-        if (note_match_indices == null || note_match_indices.isEmpty()) {
+        if (noteMatchIndices == null || noteMatchIndices.isEmpty()) {
             System.out.println("No text been searched");
-        } else if (note_match_indices.getFirst() == -1) {
+        } else if (noteMatchIndices.getFirst() == -1) {
             System.out.println("No matches; no previous instance");
-        } else if (current_search_index > 0) {
-            current_search_index--;
+        } else if (currentSearchIndex > 0) {
+            currentSearchIndex--;
             searchNote();
         } else {
-            current_search_index = Math.toIntExact(note_match_indices.size()-1);
+            currentSearchIndex = Math.toIntExact(noteMatchIndices.size() - 1);
             searchNote();
         }
     }
     public void nextMatchB() {
-        System.out.println("");
-        if (note_match_indices == null || note_match_indices.isEmpty()) {
+        if (noteMatchIndices == null || noteMatchIndices.isEmpty()) {
             System.out.println("No text been searched");
-        } else if (note_match_indices.getFirst() == -1) {
+        } else if (noteMatchIndices.getFirst() == -1) {
             System.out.println("No matches; no next instance");
-        } else if (current_search_index < note_match_indices.size() - 1) {
-            current_search_index++;
+        } else if (currentSearchIndex < noteMatchIndices.size() - 1) {
+            currentSearchIndex++;
             searchNote();
         } else {
-            current_search_index = 0;
+            currentSearchIndex = 0;
             searchNote();
         }
     }
